k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quickpad-backend
  labels:
    app: quickpad-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: quickpad-backend
  template:
    metadata:
      labels:
        app: quickpad-backend
    spec:
      containers:
      - name: backend
        image: gcr.io/cmpe48a-quickpad/quickpad-backend:latest
        ports:
        - containerPort: 5030
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /api/health
            port: 5030
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/health
            port: 5030
          initialDelaySeconds: 10
          periodSeconds: 5
